--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.wso2.carbon.identity.msf4j</groupId>
         <artifactId>tomcat-msf4j</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <groupId>org.wso2.carbon.identity.msf4j</groupId>
@@ -16,19 +16,24 @@
     <dependencies>
         <dependency>
             <groupId>org.wso2.msf4j</groupId>
+            <artifactId>msf4j-service</artifactId>
+            <version>2.5.2</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.msf4j</groupId>
             <artifactId>msf4j-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
+            <groupId>org.wso2.msf4j</groupId>
+            <artifactId>msf4j-swagger</artifactId>
+            <version>2.5.2</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.msf4j</groupId>
             <artifactId>msf4j-servlet</artifactId>
+            <version>1.0.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -38,12 +43,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
