--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <groupId>org.wso2.carbon.identity.msf4j</groupId>
     <artifactId>tomcat-msf4j</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.1</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <developers>
         <developer>
@@ -121,6 +121,19 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-scr-plugin</artifactId>
+                    <version>${maven.scr.plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>generate-scr-scrdescriptor</id>
+                            <goals>
+                                <goal>scr</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
                 <!--<plugin>-->
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
                 <!--<artifactId>maven-javadoc-plugin</artifactId>-->
@@ -147,19 +160,22 @@
 
     <modules>
         <module>msf4j-servlet-bridge</module>
-        <module>sample</module>
+        <module>samples/hello-world</module>
     </modules>
 
     <properties>
         <msf4j.version>2.5.2</msf4j.version>
         <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
+        <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
         <tomcat.embed.core.version>8.5.24</tomcat.embed.core.version>
         <maven.checkstyleplugin.version>2.16</maven.checkstyleplugin.version>
         <maven.findbugsplugin.version>3.0.2</maven.findbugsplugin.version>
+        <maven.scr.plugin.version>1.20.0</maven.scr.plugin.version>
 
         <carbon.kernel.version>4.4.19</carbon.kernel.version>
 
         <osgi.framework.imp.pkg.version.range>[1.4.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
+        <osgi.service.http.imp.pkg.version.range>[1.2.1, 2.0.0)</osgi.service.http.imp.pkg.version.range>
     </properties>
 </project>
